fix: toggle menu modal on small devices

--- a/src/scss/components/_mobile-nav.scss
+++ b/src/scss/components/_mobile-nav.scss
@@ -6,7 +6,8 @@
   z-index: 3;
   background-color: $theme-blue;
   &__links {
-    padding: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     margin-top: 148px;
     a {
       color: #fff;
